--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "landing-design-react",
+  "homepage": "https://aguadebebe.github.io/landing-design-react/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,11 +13,16 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+ 
+
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
